<resources>
    <string name="app_name">1KotOleksiiHomeWorkAndroid</string>
    <string name="ac">AC</string>
    <string name="rem">%</string>
    <string name="div">/</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="mul">x</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="sub">-</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="add">+</string>
    <string name="btn0">0</string>
    <string name="dot">,</string>
    <string name="res">=</string>
</resources>