<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#010101"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/display"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#010101"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnClear"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.4"
            android:backgroundTint="#a5a5a5"
            android:text="@string/ac"
            android:textColor="#000000"
            android:textSize="40sp"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/btnRemainder"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.1"
            android:backgroundTint="#a5a5a5"
            android:text="@string/rem"
            android:textColor="#000000"
            android:textSize="40sp" />

        <Button
            android:id="@+id/btnDiv"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.1"
            android:backgroundTint="#a5a5a5"
            android:text="@string/div"
            android:textColor="#000000"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn7"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.25"
            android:backgroundTint="#343434"
            android:text="@string/btn7"
            android:textColor="#fafafa"
            android:textSize="40sp"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/btn8"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.25"
            android:backgroundTint="#343434"
            android:text="@string/btn8"
            android:textColor="#fafafa"
            android:textSize="40sp" />

        <Button
            android:id="@+id/btn9"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.25"
            android:backgroundTint="#343434"
            android:text="@string/btn9"
            android:textColor="#fafafa"
            android:textSize="40sp" />

        <Button
            android:id="@+id/btnMul"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.25"
            android:backgroundTint="#fea00c"
            android:text="@string/mul"
            android:textColor="#fafafa"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn4"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.25"
            android:backgroundTint="#343434"
            android:text="@string/btn4"
            android:textColor="#fafafa"
            android:textSize="40sp" />

        <Button
            android:id="@+id/btn5"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.25"
            android:backgroundTint="#343434"
            android:text="@string/btn5"
            android:textColor="#fafafa"
            android:textSize="40sp" />

        <Button
            android:id="@+id/btn6"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.25"
            android:backgroundTint="#343434"
            android:text="@string/btn6"
            android:textColor="#fafafa"
            android:textSize="40sp" />

        <Button
            android:id="@+id/btnSub"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.25"
            android:backgroundTint="#fea00c"
            android:text="@string/sub"
            android:textColor="#fafafa"
            android:textSize="40sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.25"
            android:backgroundTint="#343434"
            android:text="@string/btn1"
            android:textColor="#fafafa"
            android:textSize="40sp" />

        <Button
            android:id="@+id/btn2"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.25"
            android:backgroundTint="#343434"
            android:text="@string/btn2"
            android:textColor="#fafafa"
            android:textSize="40sp" />

        <Button
            android:id="@+id/btn3"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.25"
            android:backgroundTint="#343434"
            android:text="@string/btn3"
            android:textColor="#fafafa"
            android:textSize="40sp" />

        <Button
            android:id="@+id/btnAdd"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.25"
            android:backgroundTint="#fea00c"
            android:text="@string/add"
            android:textColor="#fafafa"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn0"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.4"
            android:backgroundTint="#343434"
            android:text="@string/btn0"
            android:textColor="#fafafa"
            android:textSize="40sp" />

        <Button
            android:id="@+id/btnDot"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.1"
            android:backgroundTint="#343434"
            android:text="@string/dot"
            android:textColor="#fafafa"
            android:textSize="40sp" />

        <Button
            android:id="@+id/btnResult"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.1"
            android:backgroundTint="#fea00c"
            android:text="@string/res"
            android:textColor="#fafafa"
            android:textSize="40sp" />

    </LinearLayout>
</LinearLayout>